# Antonius-MIA

./: .gitignore  Antonius' General Purpose License (AGPL).txt  Antonius’ General Purpose License (AGPL)  CMakeCache.txt  CMakeLists.txt  MIA2.cbp  Makefile  README PLEASE.md  README.md  README.md~  UpdateRelease.sh  build.sh  cmake_install.cmake  updateRelease.sh
Documentation/: AlternateOSSyntax.txt  Cube format.txt  MIA Manual.aux  MIA Manual.out  MIA Manual.tex  MIA Manual.toc  MIAManual.aux  MIAManual.idx  MIAManual.ilg  MIAManual.ind  MIAManual.out  MIAManual.tex  MIAManual.toc  Thumbs.db
Documentation/TeX_files/: AppendixI.aux  Copywrite.aux  Copywrite.tex  D3C.aux  D3CIntegration.aux  D3CIntegration.tex  MIAConfig.aux  MIAConfig.tex  MIASequencer.tex  MIAcommands.aux  MIAcommands.tex  MIAconcept.aux  MIAconcept.tex  WoWFeatures.aux  WoWFeatures.tex  WorkoutGeneration.aux  WorkoutGeneration.tex  frontmatter.tex  packages.aux  packages.tex  references.aux  settings.aux  settings.tex
Documentation/Workout Analysis/: generating functions.nb
Release/Resources/: MIAConfig.MIA  MIAConfig.txt
Release/Resources/InputFiles/: MIASequences.txt  exercises.txt
Some old projects/D3C/QT Files/D0sag3Command/: D0sag3Command.pro  d0sencryption.cpp  d0sencryption.h  homewindow.cpp  homewindow.h  homewindow.ui  main.cpp  mathematics.cpp  mathematics.h  programconstants.cpp  programconstants.h
Some old projects/D3C/QT Files/build-D0sag3Command-Desktop_Qt_5_3_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_CryptWindow.h  ui_encryptionwindow.h  ui_homewindow.h
Some old projects/D3C/pre-v1.200 files/: D0sag3 Command Change log.txt  D3CCL.txt
Some old projects/D3C/pre-v1.200 files/D0sag3Command v1.1/: D0sag3Command.pro  (+14 more)
Some old projects/VKK/: Keys.cpp  Keys.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Some old projects/WoWDPSSim/: Mage.cpp  Mage.h  dpssim.cpp  dpssim.ui  main.cpp
Some old projects/d0sag3/: HeaderList.txt  d3intmath.cpp  d3string.h  d3stringmath.cpp  d3stringmath.h  euler.h
Some old projects/randomFromFile/: main.cpp
Workout Analysis/: workoutPlots.py
bin-old/: D3CEncryptPW.h  D3CMath.cpp  D3CMath.h  LOLANetUse.cpp  LOLANetUse.h  MIA  MIACommands.cpp  MIACommands.h  MIAEncrypt.cpp  MIAEncrypt.h  MIAMain.cpp  MIAMisc.cpp  MIAMisc.h  MIAMusic.h  MIAProgram.cpp  MIAProgram.h  MIASequencer.h  WinKeys.h  ld.exe.stackdump
bin-old/Resources/: MIAConfig.MIA
bin-old/Resources/EncryptedFiles/: input.txt
bin-old/Resources/InputFiles/: MIASequences.txt  wowgreens.txt
dlls/: CMakeLists.txt
documentation/: MIAManual.idx  MIAManual.ind  MIAManual.tex
documentation/TeX_files/: Copywrite.tex  MIAConfig.tex  MIAconcept.tex  WoWFeatures.tex  WorkoutGeneration.tex  packages.tex
documentation/other/: Template.txt
old-projects/D3C/: desktop.ini
old-projects/VKK/: Keys.cpp  Keys.h  Mailing_List_Wyrmrest.txt  VKK.pro  mainwindow.ui
old-projects/WoWDPSSim/: WoWDPSSim.pro  dpssim.h
old-projects/d0sag3/: d0sag3.pro  d3intmath.h  d3string.cpp  euler.cpp
release/: CMakeLists.txt  MIA  MIATerminal
release/resources/: CMakeLists.txt  MIAConfig.MIA
resources/: README.txt
(+43 files in other folders)
