

# @TODO - Setup install so config file is properly found.
# install(FILES "${CMAKE_CURRENT_BINARY_DIR}/MIAConfig.MIA" TYPE INCLUDE DESTINATION "${APPDATA_DIRECTORY}")
# install(FILES ${CMAKE_CURRENT_BINARY_DIR}/excuses.MIA TYPE INCLUDE DESTINATION ${APPDATA_DIRECTORY})
# install(DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/inputFiles TYPE INCLUDE DESTINATION ${APPDATA_DIRECTORY})